--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,10 @@ environment:
   - julia_version: 1.1
   - julia_version: latest
 
+platform:
+  - x86 # 32-bit
+  - x64 # 64-bit
+
 branches:
   only:
     - master
