--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,12 @@ addons:
             - libgtk-3-dev
 
 script:
- - julia --check-bounds=yes --inline=no -e 'import Pkg; Pkg.build("SearchBall"); Pkg.test(; coverage=true)'
+  - if [[ `uname` = "Linux" ]]; then TESTCMD="xvfb-run julia"; else TESTCMD="julia"; fi
+  - $TESTCMD --check-bounds=yes --inline=no -e 'import Pkg; Pkg.build("SearchBall"); Pkg.test(; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("SearchBall")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
   # push coverage results to Codecov
-  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
   # create docu
-  - julia -e 'import Pkg; Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
+  # - julia -e 'import Pkg; Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
